src/test/ui/fully-qualified-type/fully-qualified-type-name1.stderr
error[E0308]: mismatched types
  --> $DIR/fully-qualified-type-name1.rs:5:9
   |
LL |     x = 5;
   |         ^ expected enum `Option`, found integer
   |
   = note: expected enum `Option<usize>`
              found type `{integer}`
help: try wrapping the expression in `Some`
   |
LL |     x = Some(5);
   |         +++++ +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
